@@ -19,7 +19,7 @@ if(INCLUDE_SANDBOX)
     externalproject_add(
         ${SANDBOX_PACKAGE}
         GIT_REPOSITORY https://github.com/mozilla-services/lua_sandbox.git
-        GIT_TAG adfb9adf2a8872c9a9cdde299f4a84218d93a6f3
+        GIT_TAG 889e439a407f3bc82a1a5bfa5d9c67c7e01f62d9
         CMAKE_ARGS ${SANDBOX_ARGS}
         INSTALL_DIR ${PROJECT_PATH}
     )
